# otus-homework-istio

./: .gitignore  .tool-versions  Commands.md  Dockerfile  MY.md  Makefile  README.md  README_HW.md  README_bad.md  README_original.md  REPORT.md  Readme.md  TASK.md  Vagrantfile  appconfig.yaml  application.yaml  appmanifest.yaml  commands.txt  debug.sh  demo-requests.http  deployment.yaml  deployment.yml  destination-rule.yaml  destroy.sh  docker-compose.yaml  echo-server-split.yaml  echoserver-balance.yaml  echoserverTwoDeploys.yaml  gateway.yaml  helloworld-deployment-service.yaml  homework.md  howto.txt  istio-gateway.yaml  istio-install.txt  kiali-cr.yaml  kiali.yaml  launch.sh  load.cmd  load.sh  makefile  (+12 more)
HelloWorldApp/: Dockerfile  HelloWorldApp  build.sh  go.mod  go.sum  main.go
Results/: Istio notes.txt
app/: 0_namespace.yaml  1_deployment.yaml  2_service.yaml  3_gateway.yaml  4_destinationrule.yaml  5_virtualservice.yaml  App.java  Cargo.toml  Dockerfile  README.md  app.py  app.yaml  app_manifest.yaml  back-app.yaml  build.sh  buildPush.sh  deployment.yaml  deployment.yml  deployment1.yaml  deployment2.yaml  deployments.yaml  destination-rule.yaml  echoserver.yaml  echoserver1.yaml  echoserver2.yaml  echoserverV2.yaml  echoservers.yaml  (+28 more)
app-load/: load.js
app-manifests/: app-load.yaml  app-manifest.yaml  istio-ingress.yaml
echoserver_project/app/: Cargo.toml
echoserver_project/app/src/: app_factory.rs  main.rs  settings.rs
echoserver_project/app/src/core/: errors.rs  requests.rs  responses.rs
echoserver_project/app/src/views/: health.rs  routes.rs
(+410 files in other folders)
